--- a/SkilEx/Helper/ta.lproj/Localizable.strings
+++ b/SkilEx/Helper/ta.lproj/Localizable.strings
@@ -14,7 +14,7 @@
 "login_text" = "உள்நுழை";
 "skip_text" = "இப்போதைக்கு தவிர்";
 "mobilenumberAlert" = "இப்போதைக்கு தவிர்";
-"reffreal_text" = "பரிந்துரை குறியீடு";
+"reffreal_text" = "பரிந்துரை குறியீடு(கட்டாயமற்றது)";
 
 /*Done Cancel */
 "done" = "முடிந்தது";
@@ -50,6 +50,8 @@
 
 /* Home text */
 "homesearchbar_text" = "ஸ்கிலெக்ஸ் சேவைகளை தேடவும்";
+"hometoptrendingheading_text" = "பிரபலமான சேவைகள்";
+"homemostpopularheading_text" = "ஸ்கைலெக்ஸிலிருந்து மிகவும் பிரபலமான சேவைகள்";
 
 /* User Profile */
 "userprofilenav_text" = "பயனர் சுயவிவரம்";
@@ -58,8 +60,8 @@
 "shareSkilex_text" = "ஸ்கைலெக்ஸ் பகிரவும்";
 "languagechange_text" = "மொழியை தேர்வுசெய்க";
 "logout_text" = "வெளியேறு";
-"referEarn_text" = "பார்க்கவும் சம்பாதிக்கவும்";
-"wallet_text" = "ஸ்கிலெக்ஸ் Wallet";
+"referEarn_text" = "பரிந்துரைத்து சம்பாதிக்கவும்";
+"wallet_text" = "ஸ்கிலெக்ஸ் வாலட்";
 
 /* Services text */
 "servicestitle_text" = "சேவைகள்";
@@ -69,13 +71,11 @@
 "servicespageBack_text" = "நீங்கள் பக்கத்தை விட்டு வெளியேற விரும்பினால், ஏற்கனவே உள்ள அனைத்து சேவைகளும் நீக்கப்படும்";
 "servicescartmsg_text" = "உங்கள் சேவை பட்டியல் காலியாக உள்ளது";
 
-
 /* ServiceDeatil text */
 "servicedetailnav_text" = "தேடல் விபரங்கள்";
 "servicedetailservice_text" = "சேவைகள்";
 "servicedetailsummary_text" = "நிறைவு சுருக்கம்";
 "servicedetailadd_text" = "சேர்";
-
 
 /* ServiceDiscripition text */
 "servicediscripitionnav_text" = "சேவை விபரம்";
@@ -91,6 +91,11 @@
 "viewsummarytotalamount_text" = "மொத்த தொகை";
 "viewsummaryproceed_text" = "உறுதிப்படுத்தவும்";
 "ordersummary_text" = "ஆர்டர் சுருக்கம்";
+"ordersummarycartempty_text" = "அனைத்து ஆர்டர்களும் ரத்து செய்யப்பட்டன";
+"ordersummarycartname_text" = "பெட்டகம்";
+"ordersummarynotesheading_text" = "விலைகள் வேலைக்குத் தேவையான பொருட்கள் /
+உதிரிபாகங்கள் பிரத்தியேகமானவை, அதே
+வாடிக்கையாளரால் வழங்கப்பட வேண்டும்.";
 
 /* CustomerAddress text */
 "customeraddressnavtitle_text" = "முகவரி";
@@ -101,7 +106,7 @@
 "customeraddresstime_text" = "நேரத்தை தேர்வு செய்க";
 "customeraddressproceed_text" = "தொடரவும்";
 "customeraddressnotes_text" = "குறிப்புகளைச் சேர்க்கவும்";
-
+"customeraddressnotesheading_text" = "சேவையைப் பற்றிய அல்லது பொருள் தொடர்பான ஏதேனும் குறிப்பிட்ட விவரங்கள்";
 
 /* Searchresult text */
 "searchresultnavtitle_text" = "தேடல் முடிவுகள்";
@@ -110,13 +115,11 @@
 "advancepaymentnavtitle_text" = "முன் பணம்";
 "advancepaymentproceed_text" = "தொடரவும்";
 
-
 /* Ongoing text */
 "ongoingservicenavtitle_text" = "நடப்பு சேவைகள்";
 
 /* Requested text */
 "requestedservicenavtitle_text" = "கோரிய சேவைகள்";
-
 
 /*RequestedservicesDetail text */
 "servicesdetailreqstednavtitle_text" = "கோரிய சேவையின் விபரங்கள்";
@@ -129,7 +132,9 @@
 "servicesdetailongoingcallserviceperson_text" = "சேவகரை அழை";
 "servicesdetailongoingtrack_text" = "கண்காணி";
 "servicesdetailongoingstart_text" = "தொடங்கவும்";
-
+"servicesdetailongoingstatusapproved_text" = "ஏற்றுக்கொள்ளப்பட்டது";
+"servicesdetailongoingstatusassigned_text" = "நியமிக்கப்பட்டுள்ளது";
+"servicesdetailongoingstatusongoing_text" = "நடந்து கொண்டிருக்கிறது";
 
 /*RequestedservicesDetail text */
 "servicesdetailrequestednavtitle_text" = "கோரிய சேவையின் விபரங்கள்";
@@ -144,7 +149,7 @@
 "bookingstatusnavtitle_text" = "சேவை முன்பதிவு செய்யப்பட்டது";
 "bookingsucces_text" = "வெற்றி";
 "bookingsuccesstatus_text" = "உங்கள் சேவை வெற்றிகரமாக முன்பதிவு செய்யப்பட்டது";
-"backtohome_text" = "முகப்பு பக்கத்திற்கு செல்க";
+"backtohome_text" = "சரி";
 "bookingfailed_text" = "மன்னிக்கவும் !";
 "bookingfailedstatus_text" = "உங்களது முன்பதிவு தோல்வியடைந்தது!";
 "backtohomefailed_textt" = "மீண்டும் முயற்சிக்கவும்";
@@ -153,7 +158,6 @@
 
 /*Tracking text */
 "trackingnavtitle_text" = "கண்காணிப்பு";
-
 
 /*ServiceHistorySummary text */
 "servicehistorysummarynavtitle_text" = "சேவை முன்பதிவு நிறைவுச்சுருக்கம்";
@@ -179,11 +183,11 @@
 "serviceapply_text" = "விண்ணப்பிக்கவும்";
 "serviceadditional_text" = "கூடுதல் சேவை";
 "serviceTravelAllowance_text" = "பயணப்படி";
+"servicepaybywallet_text" = "வாலட் மூலம் பணம் செலுத்தலாம்";
 
 
 /*AdditionalService text */
 "additionalservicenavtitle_text" = "கூடுதல் சேவைகள்";
-
 
 /*AdditionalService text */
 "paymentmethodavtitle_text" = "பணம் செலுத்தும் முறை";
@@ -211,10 +215,10 @@
 /*aboutus text */
 "aboutusnavtitle_text" = "ஸ்கிலெக்ஸ்";
 "aboutLabel_text" = "ஸ்கிலெக்ஸ் - ஒரு பார்வை";
+"aboutaddressheadinglabel_text" = "விற்பனை தொடர்பான வினவல்கள் அல்லது பொது உதவிக்கு எங்களை தொடர்பு கொள்ளவும்";
 
 /*viewbill text */
 "viewbillnavtitle_text" = "ரசிதை பார்க்கவும்";
-
 
 /* alerts local text */
 "advancepamentnotreturn" = "நீங்கள் ரத்துசெய்தால், செலுத்தப்பட்ட முன்கூட்டியே தொகை உங்களுக்கு திருப்பித் தரப்படாது. நீங்கள் நிச்சயமாக ரத்து செய்ய விரும்புகிறீர்களா?";
@@ -230,14 +234,15 @@
 "okalert" = "சரி";
 "noinfpormationguest" = "எந்த தகவலும் கிடைக்கவில்லை";
 "additionalservicealert" = "கூடுதல் சேவை காலியாக உள்ளது";
-"servicedetailalertnextcatgoery" = "மற்ற பிரிவிற்கு செல்லும் முன் தேர்ந்தெடுக்கப்பட்டதை உறுதி செய்யவும். இல்லையேல் அனைத்து தேர்வுகளும் நிராகரிக்கப்படும்.";
-"confirmalert" = "உறுதி செய்க";
+"servicedetailalertnextcatgoery" = "தயவுசெய்து ஒரே ஒரு சேவையை மட்டும் தேர்ந்தெடுக்கவும், சேவை நேரத்தில் சேவை நிபுணரால் கூடுதல் சேவை சேர்க்கப்படும்.";
+"confirmalert" = "அழித்து தொடரவும்";
 "logintoaccess" = "சேவை முன்பதிவு செய்யஉள்நுழைவது அவசியம் ";
 "searchtextnotempty" = "நீங்கள் என்ன தேடுகிறீர்கள்?";
 "LogOutAccess" = "நீங்கள் உண்மையில் வெளியேற விரும்புகிறீர்களா?";
 "LogOutAccessButtonOK" = "ஆம்";
 "LogOutAccessButtonCancel" = "இல்லை";
 "GuestUSER" = "விருந்தினர் பயனர்";
+"cancelcart" = "சரி";
 
 
 /* Rate Service text */
@@ -250,12 +255,26 @@
 "termsandConditionnavtitle_text" = "விதிமுறைகள் மற்றும் நிபந்தனைகள்";
 
 /*ReferAndEarn text */
-"amountStatusnavtitle_text" = "பார்க்கவும் சம்பாதிக்கவும்";
+"referAndEarnnavtitle_text" = "பரிந்துரைத்து சம்பாதிக்கவும்";
+"referAndEarnClaimbutn_text" = "வெகுமானம் கோரவும்";
+"referAndEarnClaimEarnAmount_text" = "பணம் சம்பாதிக்கலாம்!";
+"referAndEarnClaimInvite_text" = "ஸ்கில்எக்ஸை உங்கள் நண்பர்களுக்கு பரிந்துரைத்து பணம் சம்பாதியுங்கள்!";
+"referAndEarnClaimreferfriends_text" = "பரிந்துரைக்கவும்";
+"referAndEarnClaimtotalearned_text" = "ஈட்டிய மொத்த புள்ளிகள்";
+"referAndEarnpoints_text" = "புள்ளிகள்";
+"referAndEarncancel_text" = "ரத்துசெய்";
+"referAndEarnalerttext_text" = "சம்பாதித்த புள்ளிகளுக்கான உங்கள் தொகை";
+"referAndEarnalertoktext_text" = "வாலடில் பணத்தைச் சேர்க்கவும்";
 
 /*AmountStatus text */
-"amountStatusnavtitle_text" = "தொகை நிலைs";
+"amountStatusnavtitle_text" = "தொகை நிலை";
+
 /*SkilexWallet text */
-"SkilexWalletnavtitle_text" = "ஸ்கிலெக்ஸ் Wallet";
+"SkilexWalletnavtitle_text" = "ஸ்கிலெக்ஸ் வாலட்";
+"SkilexWalletaddmoney_text" = "வாலடில் பணத்தைச் சேர்க்கவும்";
+"SkilexWalletlabel_text" = "ஸ்கில்எக்ஸ் வாலட் இருப்பு";
 
 /*ReviewsAndratings text */
 "reviewAndRatingsnavtitle_text" = "மதிப்புரைகள் மற்றும் மதிப்பீடுகள்";
+"advancepaymentproceed_text" = "தொடரவும்";
+"SkilexWalletaddmoneyAmount_text" = "தொகையை உள்ளிடவும்";
