--- a/SkilEx/Helper/ta.lproj/Localizable.strings
+++ b/SkilEx/Helper/ta.lproj/Localizable.strings
@@ -62,6 +62,8 @@
 "logout_text" = "வெளியேறு";
 "referEarn_text" = "பரிந்துரைத்து சம்பாதிக்கவும்";
 "wallet_text" = "ஸ்கிலெக்ஸ் வாலட்";
+"manage_Address" = "முகவரியை நிர்வகிக்க";
+"profile_backNav" = "சுயவிவர அமைப்புகள்";
 
 /* Services text */
 "servicestitle_text" = "சேவைகள்";
@@ -99,7 +101,8 @@
 
 /* CustomerAddress text */
 "customeraddressnavtitle_text" = "முகவரி";
-"locationaddress_text" = "இருப்பிடம் (முகவரி)";
+"locationaddressStreetName_text" = "கதவு எண் / கட்டிட பெயர் / தெரு பெயர்";
+"locationaddress_text" = "பகுதி / இடம்";
 "customeraddressname_text" = "பெயர்";
 "customeraddressphonenumber_text" = "தொலைபேசி எண்";
 "customeraddressdate_text" = "தேதியை தேர்வு செய்க";
@@ -107,6 +110,8 @@
 "customeraddressproceed_text" = "தொடரவும்";
 "customeraddressnotes_text" = "குறிப்புகளைச் சேர்க்கவும்";
 "customeraddressnotesheading_text" = "சேவையைப் பற்றிய அல்லது பொருள் தொடர்பான ஏதேனும் குறிப்பிட்ட விவரங்கள்";
+"customeraddressfirstalert" = "வரைபடத்தில் இருப்பிடத்தைத் தேர்ந்தெடுக்கவும்";
+
 
 /* Searchresult text */
 "searchresultnavtitle_text" = "தேடல் முடிவுகள்";
@@ -278,3 +283,8 @@
 "reviewAndRatingsnavtitle_text" = "மதிப்புரைகள் மற்றும் மதிப்பீடுகள்";
 "advancepaymentproceed_text" = "தொடரவும்";
 "SkilexWalletaddmoneyAmount_text" = "தொகையை உள்ளிடவும்";
+
+/* choose Address*/
+"choose_yourAddress" = "உங்கள் முகவரியைத் தேர்வுசெய்க";
+"save_Address" = "முகவரியைச் சேமிக்க";
+"address_update_Alert" = "முகவரி வெற்றிகரமாக புதுப்பிக்கப்பட்டது";
