--- a/SkilEx/Helper/ta.lproj/Localizable.strings
+++ b/SkilEx/Helper/ta.lproj/Localizable.strings
@@ -288,3 +288,4 @@
 "choose_yourAddress" = "உங்கள் முகவரியைத் தேர்வுசெய்க";
 "save_Address" = "முகவரியைச் சேமிக்க";
 "address_update_Alert" = "முகவரி வெற்றிகரமாக புதுப்பிக்கப்பட்டது";
+"no_address" = "முகவரி எதுவும் கிடைக்கவில்லை";
